--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Image Example</title>
 </head>
 <body>
-
+    <h1>Image Example</h1>
    
     <!-- Replace 'image-url.jpg' with the actual URL or path to your image -->
     <img src="ddsc.jpg" >
