--- a/foundational.html
+++ b/foundational.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Example</title>
+    <title>Foundational Certificate</title>
 </head>
 <body>
 
-   
-    <!-- Replace 'image-url.jpg' with the actual URL or path to your image -->
-    <img src="ddsc.jpg" >
+    <h1>Foundational Certificate</h1>
+
+    <img src="df.jpg" alt="Foundational Certificate Image">
 
 </body>
 </html>
