--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Example</title>
+    <title>Choose an Option</title>
 </head>
 <body>
 
-   
-    <!-- Replace 'image-url.jpg' with the actual URL or path to your image -->
-    <img src="ddsc.jpg" >
+    <h1>Choose an Option</h1>
+
+    <button onclick="window.location.href='foundational.html'">Foundational Certificate</button>
+    <button onclick="window.location.href='data_science_diploma.html'">Diploma in Data Science</button>
+    <button onclick="window.location.href='programming_diploma.html'">Diploma in Programming</button>
 
 </body>
 </html>
+
