--- a/index.html
+++ b/index.html
@@ -3,15 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Choose an Option</title>
+    <title>Yanamadala Sai Nikhil's Portfolio</title>
 </head>
 <body>
 
-    <h1>Choose an Option</h1>
+    <h1>Yanamadala Sai Nikhil</h1>
+    <p>Email: yanamadalasainikhil@gmail.com</p>
 
-    <button onclick="window.location.href='foundational.html'">Foundational Certificate</button>
-    <button onclick="window.location.href='data_science_diploma.html'">Diploma in Data Science</button>
-    <button onclick="window.location.href='programming_diploma.html'">Diploma in Programming</button>
+    <h2>Education</h2>
+    <ul>
+        <li>SSC - Bhaskyam High School, Kukatpally (2018), GPA: 9.5</li>
+        <li>Intermediate - Bhaskyam IIT-JEE Junior College, Kukatpally (08/2018 - 03/2020), Percentage: 92.1%</li>
+        <li>B.Tech - Mahatma Gandhi Institute of Technology, Gandipet (12/2020 - Present),ECE, GPA: 7.7</li>
+
+
+  
+
+        <li>B.S, Indian Institute of Technology Madras (07/2020 - Present),Data Science and Applications, GPA: 7.0
+            <h1>Certificates from IITM</h1>
+            <button onclick="window.location.href='foundational.html'">Foundational Certificate</button>
+            <button onclick="window.location.href='data_science_diploma.html'">Diploma in Data Science</button>
+            <button onclick="window.location.href='programming_diploma.html'">Diploma in Programming</button>
+        </li>
+       
+    </ul>
+
+    <h2>Work Experience</h2>
+    <p>Intern at KoderTroop (05/2023 - 06/2023, Hyderabad)
+        <button onclick="window.location.href='kt.html'">Diploma in Programming</button>
+    </p>
+   
+
+    <p>Achievements/Tasks:</p>
+    <ul>
+        <li>
+            <h1>Kaggle Python Certificate</h1>
+            <button onclick="window.location.href='kaggle.html'">Python Programming</button></li>
+    </ul>
+    <p>Projects
+    Ticket Show Application(V2)
+    Jul 2023 - Sep 2023
+    Associated with Indian Institute of Technology, Madras
+    Developed web application for booking tickets, using vue.js for frontend, Flask restful for api and sqlite for database
+    Ticket Show Application(V1)
+    Mar 2023 - May 2023
+    Associated with Indian Institute of Technology, Madras
+    Developed web application for booking tickets, using flask app for front end and sqlite for database
+    </p>
 
 </body>
 </html>
