--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <h2>Work Experience</h2>
     <p>Intern at KoderTroop (05/2023 - 06/2023, Hyderabad)
-        <button onclick="window.location.href='kt.html'">Diploma in Programming</button>
+        <button onclick="window.location.href='kt.html'">koder troop</button>
     </p>
    
 
