--- a/kaggl.html
+++ b/kaggl.html
@@ -9,7 +9,7 @@
 
    
 
-    <img src="WhatsApp Image 2024-01-23 at 9.01.18 PM.jpeg" alt="Foundational Certificate Image">
+    <img src="pp.jpeg" >
 
 </body>
 </html>
