--- a/kt.html
+++ b/kt.html
@@ -8,7 +8,7 @@
 <body>
 
 
-    <img src="kt.jpeg" alt="Foundational Certificate Image">
+    <img src="kt.jpg" alt="Foundational Certificate Image">
 
 </body>
 </html>
